2019-10-20  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-vect-slp.c (vect_slp_analyze_bb_1): Take a bb_vec_info
	and return a boolean success value.  Move the allocation and
	initialization of the bb_vec_info to...
	(vect_slp_bb_region): ...here.  Update call accordingly.
	(vect_slp_bb): Apply PARAM_SLP_MAX_INSNS_IN_BB here rather
	than in vect_slp_analyze_bb_1.

2019-10-20  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-vect-slp.c (vect_slp_analyze_bb_1): Call save_datarefs
	when processing the given datarefs for the first time and
	check_datarefs subsequently.
	(vect_slp_bb_region): New function, split out of...
	(vect_slp_bb): ...here.  Don't recompute the region bounds and
	dataref sets when retrying with a different vector size.

2019-10-19  Jakub Jelinek  <jakub@redhat.com>
	    Uroš Bizjak  <ubizjak@gmail.com>

	PR target/92140
	* config/i386/predicates.md (int_nonimmediate_operand): New special
	predicate.
	* config/i386/i386.md (*add<mode>3_eq, *add<mode>3_ne,
	*add<mode>3_eq_0, *add<mode>3_ne_0, *sub<mode>3_eq, *sub<mode>3_ne,
	*sub<mode>3_eq_1, *sub<mode>3_eq_0, *sub<mode>3_ne_0): New
	define_insn_and_split patterns.

2019-10-19  Iain Sandoe  <iain@sandoe.co.uk>

	* config/rs6000/rs6000.md: Delete out--of-date comment about
	special-casing integer loads.

2019-10-19  JeanHeyd Meneide  <phdofthehouse@gmail.com>

	* escaped_string.h (escaped_string): New header.
	* tree.c (escaped_string): Remove escaped_string class.

2019-10-18  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92157
	* tree-ssa-strlen.c (handle_builtin_string_cmp): Be prepared for
	compute_string_length to return a negative result.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* config/arm/arm.md (negv<SIDI:mode>3): New expansion rule.
	(negvsi3, negvdi3): Delete.
	(negdi2_compare): Delete.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* config/arm/arm.md (subvdi4): Decompose calculation into 32-bit
	operations.
	(subdi3_compare1): Delete pattern.